04 Fix hero bg color and spacing

--- a/04-tech-book-club-landing-page/src/style.css
+++ b/04-tech-book-club-landing-page/src/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 .hero {
-  background: url("assets/images/pattern-light-bg.svg");
+  background: var(--neutral-100) url("assets/images/pattern-light-bg.svg");
 }
 
 .hero__title {
@@ -66,7 +66,7 @@ body {
 .hero__text {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   flex: 1;
 }
 
@@ -74,6 +74,7 @@ body {
   padding: 1rem 1rem;
   align-self: flex-start;
   background: var(--light-salmon-50);
+  color: var(--neutral-900);
   display: flex;
   gap: 1rem;
   text-transform: uppercase;
